--- a/src/main/resources/assets/skinshuffle/lang/zh_tw.json
+++ b/src/main/resources/assets/skinshuffle/lang/zh_tw.json
@@ -59,7 +59,7 @@
   "skinshuffle.config.rendering.rotation_speed.name": "旋轉速度倍率",
   "skinshuffle.config.rendering.rotation_speed.description": "若啟用外觀旋轉，它應套用多少旋轉速度倍率？",
   "skinshuffle.config.rendering.show_cape_in_preview.name": "在預覽中顯示披風",
-  "skinshuffle.config.rendering.show_cape_in_preview.description": "是否應在預設編輯畫面中的外觀預覽中顯示目前選擇的披風（透過 minecraft.net 或 Minecraft 啟動器選擇）？",
+  "skinshuffle.config.rendering.show_cape_in_preview.description": "是否應在預設編輯畫面的外觀預覽中顯示目前選擇的披風（透過 minecraft.net 或 Minecraft 啟動器選擇）？",
   "skinshuffle.button": "外觀預設",
   "skinshuffle.carousel.title": "外觀預設",
   "skinshuffle.carousel.config_button.tooltip": "開啟設定畫面。",
