--- a/src/main/resources/assets/skinshuffle/lang/ko_kr.json
+++ b/src/main/resources/assets/skinshuffle/lang/ko_kr.json
@@ -48,16 +48,18 @@
   "skinshuffle.config.rendering.rotation": "회전",
   "skinshuffle.config.rendering.cursor": "커서",
   "skinshuffle.config.rendering.render_player_capes.name": "플레이어 망토 표시",
-  "skinshuffle.config.rendering.render_player_capes.description": "모장, 옵티파인, MinecraftCapes에서 플레이어 망토를 가져와 렌더링을 할지 정합니다.",
+  "skinshuffle.config.rendering.render_player_capes.description": "모장, 옵티파인, MinecraftCapes에서 플레이어 망토를 가져와 렌더링할지 정합니다.",
   "skinshuffle.config.rendering.rendering_style": "§l회전§r은 렌더링된 플레이어를 회전 속도 배수로 일정하게 회전시킵니다.\n§l커서§r는 렌더링된 플레이어가 인벤토리 화면과 유사하게 항상 마우스 커서를 바라보도록 만듭니다.",
   "skinshuffle.config.rendering.carousel_rendering_style.name": "회전 렌더링 스타일",
-  "skinshuffle.config.rendering.carousel_rendering_style.description": "현재 선택된 스킨 프리셋 설정을 회전 화면에서 어떻게 렌더링 할지 정합니다.",
+  "skinshuffle.config.rendering.carousel_rendering_style.description": "현재 선택된 스킨 프리셋 설정을 회전 화면에서 어떻게 렌더링할지 정합니다.",
   "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "프리뷰 렌더링 스타일",
-  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "프리셋 편집 화면에서 스킨 프리뷰를 어떻게 렌더링 할지 정합니다.",
+  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "프리셋 편집 화면에서 스킨 프리뷰를 어떻게 렌더링할지 정합니다.",
   "skinshuffle.config.rendering.widget_rendering_style.name": "위젯 렌더링 스타일",
-  "skinshuffle.config.rendering.widget_rendering_style.description": "타이틀 화면과 일시 정지 화면의 위젯을 어떻게 렌더링 할지 정합니다.",
+  "skinshuffle.config.rendering.widget_rendering_style.description": "타이틀 화면과 일시 정지 화면의 위젯을 어떻게 렌더링할지 정합니다.",
   "skinshuffle.config.rendering.rotation_speed.name": "회전 속도 배율",
   "skinshuffle.config.rendering.rotation_speed.description": "렌더링이 회전이라면 얼마나 회전할지 감도를 정합니다.",
+  "skinshuffle.config.rendering.show_cape_in_preview.name": "프리뷰에서 망토 표시",
+  "skinshuffle.config.rendering.show_cape_in_preview.description": "프리셋 편집 화면에서 선택된 망토를 표시할지 정합니다.",
   "skinshuffle.button": "스킨 프리셋",
   "skinshuffle.carousel.title": "스킨 프리셋",
   "skinshuffle.carousel.config_button.tooltip": "설정 열기",
@@ -97,5 +99,6 @@
   "skinshuffle.edit.source.cycle_prefix": "파일 위치",
   "skinshuffle.edit.source.title": "스킨 파일 위치",
   "skinshuffle.edit.source.skin_model": "스킨 모델",
-  "skinshuffle.edit.source.load_skin": "스킨 불러오기"
+  "skinshuffle.edit.source.load_skin": "스킨 불러오기",
+  "skinshuffle.edit.loading": "불러오는 중..."
 }
