Fix traditional Chinese localization

--- a/src/main/resources/assets/skinshuffle/lang/zh_tw.json
+++ b/src/main/resources/assets/skinshuffle/lang/zh_tw.json
@@ -17,18 +17,18 @@
   "skinshuffle.reconnect.server": "伺服器",
   "skinshuffle.reconnect.realm": "Realm",
   "skinshuffle.reconnect.title": "建議 %s",
-  "skinshuffle.reconnect.message": "如果您想要您的外觀對您和其他人可見，您必須 %s 目前的 %s。\n\n要 %s 嗎？",
+  "skinshuffle.reconnect.message": "如果您想要您的外觀對您和其他人可見，您必須 %s 目前的 %s。\n\n您要 %s 嗎？",
   "skinshuffle.toasts.refused_reconnect.title": "外觀對其他人不可見。",
-  "skinshuffle.toasts.refused_reconnect.message": "您必須重新連線才能使其他人看到您的外觀。\n§7§o您可以在設定中停用這個提示。",
+  "skinshuffle.toasts.refused_reconnect.message": "您必須重新連線才能讓您的外觀對其他玩家可見。\n§7§o您可以在設定中停用這個通知。",
   "skinshuffle.toasts.offline.title": "SkinShuffle 無法套用您的外觀。",
-  "skinshuffle.toasts.offline.message": "您未經驗證，外觀僅對您自己可見。\n§7§o您可以在設定中停用這個提示。",
+  "skinshuffle.toasts.offline.message": "您尚未驗證，您的外觀僅對您自己可見。\n§7§o您可以在設定中停用這個通知。",
   "skinshuffle.toasts.editor_failure.title": "編輯器發生錯誤。",
-  "skinshuffle.toasts.editor_failure.message": "請檢查記錄檔以取得更多資訊。",
+  "skinshuffle.toasts.editor_failure.message": "查看記錄檔以取得詳細資訊。",
   "skinshuffle.config.title": "SkinShuffle",
   "skinshuffle.config.popups.title": "彈出式視窗選項",
-  "skinshuffle.config.popups.description": "關於在特定情況下遊戲內出現的提示和其他彈出式視窗的設定選項。",
-  "skinshuffle.config.popups.reconnect.name": "停用外觀可見度提示",
-  "skinshuffle.config.popups.reconnect.description": "停用在變更外觀後未重新連線時出現的提示。\n\n這個提示僅在未安裝這個模組的伺服器上顯示。",
+  "skinshuffle.config.popups.description": "關於在特定情況下遊戲內出現的通知和其他彈出式視窗的設定選項。",
+  "skinshuffle.config.popups.reconnect.name": "停用外觀可見度通知",
+  "skinshuffle.config.popups.reconnect.description": "停用在變更外觀後未重新連線時出現的通知。\n\n這個通知僅在未安裝這個模組的伺服器上顯示。",
   "skinshuffle.config.general.title": "一般選項",
   "skinshuffle.config.general.description": "變更或切換功能的總選項。",
   "skinshuffle.config.general.behaviour.title": "行為",
@@ -43,19 +43,19 @@
   "skinshuffle.config.general.carousel_scroll_sensitivity.description": "預覽外觀時滑鼠捲動的靈敏度應該是多少？",
   "skinshuffle.config.general.invert_carousel_scroll.name": "反轉預覽外觀捲動方向",
   "skinshuffle.config.general.invert_carousel_scroll.description": "是否應反轉預覽外觀的捲動方向？",
-  "skinshuffle.config.rendering.title": "繪製選項",
-  "skinshuffle.config.rendering.description": "關於如何在標題畫面、暫停選單、預覽外觀和編輯畫面中繪製外觀預設的設定選項。",
+  "skinshuffle.config.rendering.title": "顯示選項",
+  "skinshuffle.config.rendering.description": "關於如何在標題畫面、暫停選單、預覽外觀和編輯畫面中顯示外觀預設的設定選項。",
   "skinshuffle.config.rendering.rotation": "旋轉",
   "skinshuffle.config.rendering.cursor": "游標",
-  "skinshuffle.config.rendering.render_player_capes.name": "繪製玩家披風",
-  "skinshuffle.config.rendering.render_player_capes.description": "SkinShuffle 是否應繪製來自 Mojang、OptiFine 和 Minecraft Capes 的披風？",
-  "skinshuffle.config.rendering.rendering_style": "§l旋轉§r 以固定的速率旋轉繪製的玩家，速率由「旋轉速度倍率」設定。\n§l游標§r 使繪製的玩家始終看著滑鼠游標，類似於物品欄畫面。",
-  "skinshuffle.config.rendering.carousel_rendering_style.name": "預覽外觀繪製風格",
-  "skinshuffle.config.rendering.carousel_rendering_style.description": "目前選擇的外觀預設應如何在預覽外觀畫面中繪製？\n",
-  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "預覽繪製風格",
-  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "外觀預覽應如何在預設編輯畫面中繪製？\n",
-  "skinshuffle.config.rendering.widget_rendering_style.name": "小工具繪製風格",
-  "skinshuffle.config.rendering.widget_rendering_style.description": "標題畫面和暫停畫面上的小工具應如何繪製？\n",
+  "skinshuffle.config.rendering.render_player_capes.name": "顯示玩家披風",
+  "skinshuffle.config.rendering.render_player_capes.description": "SkinShuffle 是否應顯示來自 Mojang、OptiFine 和 Minecraft Capes 的披風？",
+  "skinshuffle.config.rendering.rendering_style": "§l旋轉§r 以固定的速率旋轉顯示的玩家，速率由「旋轉速度倍率」設定。\n§l游標§r 使顯示的玩家始終看著滑鼠游標，類似於物品欄畫面。",
+  "skinshuffle.config.rendering.carousel_rendering_style.name": "預覽外觀顯示風格",
+  "skinshuffle.config.rendering.carousel_rendering_style.description": "目前選擇的外觀預設應如何在預覽外觀畫面中顯示？\n",
+  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "預覽顯示風格",
+  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "外觀預覽應如何在預設編輯畫面中顯示？\n",
+  "skinshuffle.config.rendering.widget_rendering_style.name": "小工具顯示風格",
+  "skinshuffle.config.rendering.widget_rendering_style.description": "標題畫面和暫停畫面上的小工具應如何顯示？\n",
   "skinshuffle.config.rendering.rotation_speed.name": "旋轉速度倍率",
   "skinshuffle.config.rendering.rotation_speed.description": "若啟用外觀旋轉，它應套用多少旋轉速度倍率？",
   "skinshuffle.config.rendering.show_cape_in_preview.name": "在預覽中顯示披風",
@@ -67,7 +67,7 @@
   "skinshuffle.carousel.view_type_button.compact.tooltip": "精簡檢視。",
   "skinshuffle.carousel.shuffle_button.tooltip.enable": "啟用外觀預覽。",
   "skinshuffle.carousel.shuffle_button.tooltip.disable": "停用外觀預覽。",
-  "skinshuffle.carousel.default_tooltip": "§4您不能修改或複製默認預設。",
+  "skinshuffle.carousel.default_tooltip": "§4您不能修改或複製預設。",
   "skinshuffle.carousel.create": "新增",
   "skinshuffle.carousel.new": "新增預設",
   "skinshuffle.carousel.save_button": "選擇預設",
@@ -86,11 +86,11 @@
   "skinshuffle.edit.customize.preset_name": "預設名稱",
   "skinshuffle.edit.customize.cape_provider": "披風來源",
   "skinshuffle.edit.source.username": "無效的使用者名稱",
-  "skinshuffle.edit.source.invalid_username": "§4§n無效的使用者名§r\n\n使用者名只能包含字母 A-Z、數字 0-9；\n使用者名稱可以包含底線；\n使用者名稱長度必須介於 3 到 16 個字元之間；\n使用者名必須存在。",
+  "skinshuffle.edit.source.invalid_username": "§4§n無效的使用者名稱§r\n\n使用者名稱只能包含字母 A-Z、數字 0-9；\n使用者名稱可以包含底線；\n使用者名稱長度必須介於 3 到 16 個字元之間；\n使用者名稱必須存在。",
   "skinshuffle.edit.source.file": "檔案",
   "skinshuffle.edit.source.invalid_file": "§4§n無效的檔案§r\n\n檔案必須存在並且為 §l.png§r 格式。",
-  "skinshuffle.edit.source.url": "URL",
-  "skinshuffle.edit.source.invalid_url": "§4§n無效的網址§r\n\n網址無效。必須為有效的  §lhttp§r 或 §lhttps§r 協定網址。",
+  "skinshuffle.edit.source.url": "網址",
+  "skinshuffle.edit.source.invalid_url": "§4§n無效的網址§r\n\n網址無效。必須為有效的 §lhttp§r 或 §lhttps§r 協定網址。",
   "skinshuffle.edit.source.uuid": "UUID",
   "skinshuffle.edit.source.invalid_uuid": "§4§n無效的 UUID§r\n\nUUID 需為以下格式：\n§lxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
   "skinshuffle.edit.source.resource_location": "資源位置",
