feat: Welcome guide and fix 1.21.4 issues.

--- a/src/main/resources/assets/skinshuffle/lang/en_us.json
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.json
@@ -100,5 +100,23 @@
   "skinshuffle.edit.source.title": "Skin Source",
   "skinshuffle.edit.source.skin_model": "Skin Model",
   "skinshuffle.edit.source.load_skin": "Load Skin",
-  "skinshuffle.edit.loading": "Loading..."
+  "skinshuffle.edit.loading": "Loading...",
+  "skinshuffle.welcome.title": "Welcome Guide",
+  "skinshuffle.welcome.more_info": "More Info",
+  "screen.skinshuffle.thankyou": "§bThank you for installing §6SkinShuffle§r!",
+  "screen.skinshuffle.read_info": "§ePlease have a read of the following information to get started, or click the §a\"More Info\"§e button for a video guide.",
+  "screen.skinshuffle.blank": "",
+  "screen.skinshuffle.carousel_heading": "§n§l§6The Carousel Screen§r",
+  "screen.skinshuffle.carousel_desc1": "§7The carousel screen is where you go to create or select skin presets to apply!",
+  "screen.skinshuffle.carousel_desc2": "§7You can use your scroll wheel to move the carousel.",
+  "screen.skinshuffle.carousel_desc3": "§7Consider trying both Compact Grid and Large carousel views to see what you prefer!",
+  "screen.skinshuffle.carousel_desc4": "§7On the grid carousel you can click §a\"Enable Shuffling\"§7 in the top left to move presets around and delete presets.",
+  "screen.skinshuffle.preset_edit_heading": "§n§l§6The Preset Edit Screen§r",
+  "screen.skinshuffle.preset_edit_desc1": "§7You can access this screen by clicking §a\"Edit\"§7 on a skin preset,",
+  "screen.skinshuffle.preset_edit_desc2": "§7where you can then choose a source (Texture URLs, Usernames, UUIDs, Files, In-game textures).",
+  "screen.skinshuffle.config_heading": "§n§l§6Configuration§r",
+  "screen.skinshuffle.config_desc": "§7You can access detailed configuration through the button at the top left of the carousel screen.",
+  "screen.skinshuffle.hotswapping_heading": "§n§l§6Skin Hotswapping§r",
+  "screen.skinshuffle.hotswapping_desc1": "§7Skin Hotswapping only works on servers with a SkinShuffle compatible mod or plugin.",
+  "screen.skinshuffle.hotswapping_desc2": "§7If the server is not compatible, you will receive a notification and must reconnect if you change skins."
 }
