feat: Drag and drop skin files.
Closes: #143

--- a/src/main/resources/assets/skinshuffle/lang/en_us.json
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.json
@@ -16,6 +16,8 @@
   "skinshuffle.reconnect.world": "world",
   "skinshuffle.reconnect.server": "server",
   "skinshuffle.reconnect.realm": "realm",
+  "skinshuffle.invalid_dropped_file.title": "Invalid File",
+  "skinshuffle.invalid_dropped_file.message": "The file you just dropped into the game window is not a valid skin texture.\nPlease make sure it's a .png file that is 64x64 or 64x32 in size.",
   "skinshuffle.reconnect.title": "%s Recommended",
   "skinshuffle.reconnect.message": "If you want your skin to be visible to you and other players, you must %s the current %s.\n\nDo you want to %s?",
   "skinshuffle.toasts.refused_reconnect.title": "Skin is not visible to others.",
@@ -100,6 +102,7 @@
   "skinshuffle.edit.source.title": "Skin Source",
   "skinshuffle.edit.source.skin_model": "Skin Model",
   "skinshuffle.edit.source.load_skin": "Load Skin",
+  "skinshuffle.edit.drag_and_drop": "Tip: You can also drag and drop skin texture files here.",
   "skinshuffle.edit.loading": "Loading...",
   "skinshuffle.welcome.title": "Welcome Guide",
   "skinshuffle.welcome.more_info": "More Info",
