Update Simplified Chinese localization

--- a/src/main/resources/assets/skinshuffle/lang/zh_cn.json
+++ b/src/main/resources/assets/skinshuffle/lang/zh_cn.json
@@ -16,6 +16,8 @@
   "skinshuffle.reconnect.world": "世界",
   "skinshuffle.reconnect.server": "服务器",
   "skinshuffle.reconnect.realm": "Realm",
+  "skinshuffle.invalid_dropped_file.title": "无效的文件",
+  "skinshuffle.invalid_dropped_file.message": "你刚放入游戏窗口的文件不是有效的皮肤纹理。\n请确保它是大小为 64x64 或 64x32 的 .png 文件。",
   "skinshuffle.reconnect.title": "建议 %s",
   "skinshuffle.reconnect.message": "如果你想要你的皮肤对他人可见，你需要 %s 当前的 %s。\n\n是否 %s？",
   "skinshuffle.toasts.refused_reconnect.title": "皮肤对他人不可见。",
@@ -58,6 +60,8 @@
   "skinshuffle.config.rendering.widget_rendering_style.description": "如何渲染在主菜单或暂停菜单的控件？\n",
   "skinshuffle.config.rendering.rotation_speed.name": "旋转倍速",
   "skinshuffle.config.rendering.rotation_speed.description": "如果皮肤旋转开启它将被运用多少的旋转倍速？",
+  "skinshuffle.config.rendering.show_cape_in_preview.name": "在预览中显示披风",
+  "skinshuffle.config.rendering.show_cape_in_preview.description": "当前选定的披风（通过 minecraft.net 或 Minecraft Launcher 选择）是否应显示在预设编辑屏幕中的皮肤预览中？",
   "skinshuffle.button": "皮肤预设",
   "skinshuffle.carousel.title": "皮肤预设",
   "skinshuffle.carousel.config_button.tooltip": "打开配置。",
@@ -97,5 +101,27 @@
   "skinshuffle.edit.source.cycle_prefix": "源",
   "skinshuffle.edit.source.title": "皮肤源",
   "skinshuffle.edit.source.skin_model": "皮肤模型",
-  "skinshuffle.edit.source.load_skin": "加载皮肤"
+  "skinshuffle.edit.source.load_skin": "加载皮肤",
+  "skinshuffle.edit.drag_and_drop": "提示：你可以将皮肤纹理文件拖拽到此处。",
+  "skinshuffle.edit.loading": "加载中...",
+  "skinshuffle.welcome.title": "欢迎指南",
+  "skinshuffle.welcome.more_info": "更多信息",
+  "screen.skinshuffle.thankyou": "§b感谢你安装§6SkinShuffle§r!",
+  "screen.skinshuffle.read_info": "§e请阅读以下信息以开始使用，或单击§a\"更多信息\"§e按钮观看视频指南。",
+  "screen.skinshuffle.blank": "",
+  "screen.skinshuffle.carousel_heading": "§n§l§6纸娃娃页面§r",
+  "screen.skinshuffle.carousel_desc1": "§7你可以在纸娃娃页面中创建或选择要应用的皮肤预设！",
+  "screen.skinshuffle.carousel_desc2": "§7你可以使用鼠标滚轮来移动纸娃娃。",
+  "screen.skinshuffle.carousel_desc3": "§7考虑尝试紧凑网格和大型旋转视图，看看你更喜欢哪个！",
+  "screen.skinshuffle.carousel_desc4": "§7在纸娃娃网格视图上，你可以点击左上角的§a\"启用切换。\"§7来移动和删除预设。",
+  "screen.skinshuffle.preset_edit_heading": "§n§l§6预设编辑页面§r",
+  "screen.skinshuffle.preset_edit_desc1": "§7你可以通过点击皮肤预设上的§a\"编辑\"§7来访问此屏幕，",
+  "screen.skinshuffle.preset_edit_desc2": "§7然后你可以在其中选择一个源（纹理 URL、用户名、UUID、文件、游戏内纹理）。",
+  "screen.skinshuffle.config_heading": "§n§l§6配置§r",
+  "screen.skinshuffle.config_desc": "§7您可以通过纸娃娃页面左上角的按钮访问详细配置。",
+  "screen.skinshuffle.hotswapping_heading": "§n§l§6皮肤热更换§r",
+  "screen.skinshuffle.hotswapping_desc1": "§7皮肤热更换仅在具有兼容SkinShuffle的模组或插件的服务器上工作。",
+  "screen.skinshuffle.hotswapping_desc2": "§7如果服务器不兼容，您将收到通知，并且在更改皮肤时必须重新连接。",
+  "skinshuffle.config.general.enableMultiAccount.title": "启用多账号支持",
+  "skinshuffle.config.general.enableMultiAccount.description": "SkinShuffle是否应使用每个帐户单独的预设文件，而不是此实例使用的所有帐户之间共享的一个文件？"
 }
