--- a/src/main/resources/assets/skinshuffle/lang/pt_br.json
+++ b/src/main/resources/assets/skinshuffle/lang/pt_br.json
@@ -16,6 +16,8 @@
   "skinshuffle.reconnect.world": "mundo",
   "skinshuffle.reconnect.server": "servidor",
   "skinshuffle.reconnect.realm": "reino",
+  "skinshuffle.invalid_dropped_file.title": "Arquivo Inválido",
+  "skinshuffle.invalid_dropped_file.message": "O arquivo que você acabou de soltar na janela do jogo não é uma textura de skin válida.\nCertifique-se de que é um arquivo .png com tamanho 64x64 ou 64x32.",
   "skinshuffle.reconnect.title": "%s Recomendado",
   "skinshuffle.reconnect.message": "Se você quer que sua skin seja visível para você e outros jogadores, você deve %s o atual %s.\n\nVocê quer %s?",
   "skinshuffle.toasts.refused_reconnect.title": "Skin não está visível para outros.",
@@ -58,6 +60,8 @@
   "skinshuffle.config.rendering.widget_rendering_style.description": "Como o widget na tela de título e na tela de pausa deve ser renderizado?\n",
   "skinshuffle.config.rendering.rotation_speed.name": "Multiplicador de Velocidade de Rotação",
   "skinshuffle.config.rendering.rotation_speed.description": "Qual multiplicador de velocidade de rotação deve ser aplicado às skins se a rotação estiver ativada?",
+  "skinshuffle.config.rendering.show_cape_in_preview.name": "Mostrar Capa na Prévia",
+  "skinshuffle.config.rendering.show_cape_in_preview.description": "A capa atualmente selecionada (selecionada via minecraft.net ou Minecraft Launcher) deve ser exibida na pré-visualização da skin na tela de edição de predefinições?",
   "skinshuffle.button": "Skins",
   "skinshuffle.carousel.title": "Predefinições de Skins",
   "skinshuffle.carousel.config_button.tooltip": "Abrir a tela de configuração.",
@@ -83,6 +87,9 @@
   "skinshuffle.edit.customize.model_cycle_prefix": "Tipo de Modelo",
   "skinshuffle.edit.customize.preset_name": "Nome da Skin",
   "skinshuffle.edit.customize.cape_provider": "Provedor de Capa",
+  "skinshuffle.edit.customize.keybind_id": "Tecla para Troca Rápida",
+  "skinshuffle.edit.customize.keybind_id_prefix": "Tecla ID",
+  "skinshuffle.edit.customize.keybind_id.none": "Nenhum",
   "skinshuffle.edit.source.username": "Nome de Usuário",
   "skinshuffle.edit.source.invalid_username": "§4§nNome de Usuário Inválido§r\n\nO nome de usuário deve conter apenas a-Z 0-9.\nO nome de usuário pode conter sublinhados.\nO nome de usuário deve ter entre 3-16 caracteres.\nO nome de usuário deve existir.",
   "skinshuffle.edit.source.file": "Arquivo",
@@ -97,5 +104,41 @@
   "skinshuffle.edit.source.cycle_prefix": "Fonte",
   "skinshuffle.edit.source.title": "Fonte da Skin",
   "skinshuffle.edit.source.skin_model": "Modelo de Skin",
-  "skinshuffle.edit.source.load_skin": "Carregar Skin"
+  "skinshuffle.edit.source.load_skin": "Carregar Skin",
+  "skinshuffle.edit.drag_and_drop": "Dica: Você também pode arrastar e soltar arquivos de textura de skin aqui.",
+  "skinshuffle.edit.loading": "Carregando...",
+  "skinshuffle.welcome.title": "Bem-vindo ao Guia",
+  "skinshuffle.welcome.more_info": "Mais informações",
+  "screen.skinshuffle.thankyou": "§bObrigado por instalar §6SkinShuffle§r!",
+  "screen.skinshuffle.read_info": "§eLeia as informações a seguir para começar ou clique no botoão de §a\"Mais informações\"§e para um guia em vídeo.",
+  "screen.skinshuffle.blank": "",
+  "screen.skinshuffle.carousel_heading": "§n§l§6A Tela Carrossel§r",
+  "screen.skinshuffle.carousel_desc1": "§7A tela carrossel é onde você vai para criar ou selecionar predefinições de skin para aplicar!",
+  "screen.skinshuffle.carousel_desc2": "§7Você pode usar a roda de rolagem para mover o carrossel.",
+  "screen.skinshuffle.carousel_desc3": "§7Experimente as visualizações Grade Compacta e Carrossel Grande para ver qual você prefere!",
+  "screen.skinshuffle.carousel_desc4": "§7No carrossel da grade, você pode clicar em §a\"Ativar embaralhamento\"§7 no canto superior esquerdo para mover e excluir predefinições.",
+  "screen.skinshuffle.preset_edit_heading": "§n§l§6A Tela de Edição de Predefinições§r",
+  "screen.skinshuffle.preset_edit_desc1": "§7Você pode acessar essa tela clicando em §a\"Editar\"§7 em uma predefinição de skin,",
+  "screen.skinshuffle.preset_edit_desc2": "§7onde você pode escolher uma fonte (URLs de textura, nomes de usuário, UUIDs, arquivos, texturas do jogo).",
+  "screen.skinshuffle.config_heading": "§n§l§6Configurações§r",
+  "screen.skinshuffle.config_desc": "§7Você pode acessar a configuração detalhada através do botão no canto superior esquerdo da tela do carrossel.",
+  "screen.skinshuffle.hotswapping_heading": "§n§l§6Troca Rápida de Skins§r",
+  "screen.skinshuffle.hotswapping_desc1": "§7A Troca Rápida de Skins só funciona em servidores com um mod ou plugin compatível com o SkinShuffle.",
+  "screen.skinshuffle.hotswapping_desc2": "§7Se o servidor não for compatível, você receberá uma notificação e deverá se reconectar se alterar as skins.",
+  "skinshuffle.config.general.enableMultiAccount.title": "Ativar Suporte a Várias Contas",
+  "skinshuffle.config.general.enableMultiAccount.description": "O SkinShuffle deve usar arquivos predefinidos por conta em vez de um arquivo compartilhado entre todas as contas usadas por esta instância?",
+  "skinshuffle.config.mineskin_proxy_port.name": "Porta da Proxy Mineskin",
+  "skinshuffle.config.mineskin_proxy_port.description": "O número da porta para se conectar ao enviar skins para a proxy MineSkin. Não altere isso a menos que saiba o que está fazendo, ou o mod irá parar de funcionar.",
+  "skinshuffle.config.popups.keybind_sound.name": "Ativar Som de Tecla de Troca Rápida",
+  "skinshuffle.config.popups.keybind_sound.description": "Deve ser reproduzido um som quando você alterna skins usando uma tecla de atalho?",
+  "key.skinshuffle.preset_1": "Teclas Predefinidas 1",
+  "key.skinshuffle.preset_2": "Teclas Predefinidas 2",
+  "key.skinshuffle.preset_3": "Teclas Predefinidas 3",
+  "key.skinshuffle.preset_4": "Teclas Predefinidas 4",
+  "key.skinshuffle.preset_5": "Teclas Predefinidas 5",
+  "key.skinshuffle.preset_6": "Teclas Predefinidas 6",
+  "key.skinshuffle.preset_7": "Teclas Predefinidas 7",
+  "key.skinshuffle.preset_8": "Teclas Predefinidas 8",
+  "key.skinshuffle.preset_9": "Teclas Predefinidas 9",
+  "category.skinshuffle.presets": "SkinShuffle Troca Rápida"
 }
